config/oidc-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: authservice-grpc
  rules:
  - to:
    - operation:
        paths: ["/*"]
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: vulnerable-authn
  namespace: zta-demo
spec:
  selector:
    matchLabels:
      app: vulnerable
  jwtRules:
  - issuer: "${AUTH0_URL}/"
    jwksUri: "${AUTH0_URL}/.well-known/jwks.json"
